src/snapshots/tptp__tfx__tests__tfx_xprod_type-3.snap
---
source: src/tfx.rs
expression: parsed
---
XprodType(
    [
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "B",
                    ),
                ),
            ),
        ),
        Atomic(
            Constant(
                TypeConstant(
                    TypeFunctor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
