src/snapshots/tptp__tfx__tests__tfx_xprod_type.snap
---
source: src/tfx.rs
expression: parsed
---
XprodType(
    [
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
        Atomic(
            Constant(
                TypeConstant(
                    TypeFunctor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
